--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "react": "18.1.0",
-    "react-native": "0.70.2"
+    "react-native": "0.70.2",
+    "react-native-cards-slider": "^0.1.2",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,5 +33,8 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm":{
+    "assets":["./assets/fonts/"]
   }
 }
