--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0"
+    "react-native-screens": "^3.18.0",
+    "react-native-select-dropdown": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -34,7 +35,9 @@
   "jest": {
     "preset": "react-native"
   },
-  "rnpm":{
-    "assets":["./assets/fonts/"]
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
