--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "react": "18.1.0",
     "react-native": "0.70.2",
+    "react-native-calendario": "^0.3.1",
     "react-native-cards-slider": "^0.1.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
